--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "baseUrl": "./src",
     "noEmitOnError": true,
     "paths": {
-      "@modules/*": ["modules/*"],
+      "@auth/*": ["auth/*"],
       "@shared/*": ["shared/*"]
     },
     "esModuleInterop": true,
