--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,81 @@
 version: 2.1
+
+base_config: &base_config
+  docker:
+    - image: cimg/node:14.15.0
+  working_directory: ~/project
+
 orbs:
-   aws-cli: circleci/aws-cli@1.0
-   serverless: circleci/serverless-framework@1.0
+  aws-cli: circleci/aws-cli@1.0
+  serverless: circleci/serverless-framework@1.0
+
 jobs:
-   one:
-     executor: serverless/default
-     steps:
-       - checkout
-       - aws-cli/setup
-       - serverless/setup
-       - run: sls deploy 
+  install-dependencies:
+    <<: *base_config
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/project
+      - restore_cache:
+          keys:
+            # "package.json" can be used if it is committed to the repo
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+      - run:
+          name: Instalando dependências...
+          command: yarn install
+      - save_cache:
+          key: v1-dependencies-{{ checksum "package.json" }}
+          paths:
+            - ./node_modules
+      - persist_to_workspace:
+          root: ~/project
+          paths:
+            - ./
+
+  build-project:
+    <<: *base_config
+    steps:
+      - attach_workspace:
+          at: ~/project
+      - run:
+          name: Buildando o projeto...
+          command: yarn build
+      - save_cache:
+          key: v1-dependencies-{{ checksum "package.json" }}
+          paths:
+            - ./node_modules
+      - persist_to_workspace:
+          root: ~/project
+          paths:
+            - ./
+
+  run-tests:
+    <<: *base_config
+
+    steps:
+      - attach_workspace:
+          at: ~/project
+      - run:
+          name: Rodando os testes...
+          command: yarn test
+
+  deploy-production:
+    executor: serverless/default
+    steps:
+      - checkout
+      - aws-cli/setup
+      - serverless/setup
+      - run: sls deploy
+
 workflows:
-  one_and_two:
+  build-run-tests:
     jobs:
-      - one
+      - install-dependencies:
+      - build-project:
+        requires:
+          - install-dependencies
+      - run-tests:
+          requires:
+            - build-project
