feat: setups jest scrips and file matching

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,12 @@
     "module": "commonjs",
     "sourceMap": false,
     "outDir": "dist",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "noEmitOnError": true,
     "paths": {
-      "@auth/*": ["auth/*"],
-      "@shared/*": ["shared/*"]
+      "@tests/*":["__tests__/*"],
+      "@auth/*": ["src/auth/*"],
+      "@shared/*": ["src/shared/*"]
     },
     "esModuleInterop": true,
     "experimentalDecorators": true,
