--- a/serverless.yml
+++ b/serverless.yml
@@ -6,8 +6,16 @@ provider:
   name: aws
   runtime: nodejs16.x
 
+package:
+  excludeDevDependencies: true
+  patterns:
+    - '!**/**' # ignores all files
+    - dist/** # includes only files from dist dir
+
 functions:
   signIn:
     handler: dist/shared/infra/index.signInHandler
-    events:
-      # Defines all trigger events here
+     events:
+      - http:
+          path: sign-in
+          method: post
