--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,7 +82,7 @@ workflows:
       - deploy-production:
           requires:
             - test
-          filters:
-            branches:
-              only: main
+          # filters:
+          #   branches:
+          #     only: main
       
