fix: fixes lambda dependencies, add dump function

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,7 @@ jobs:
 
       - aws-cli/setup
       - serverless/setup
+      - run: yarn install --production --cwd dist
       - run: sls package -p package && sls deploy --package package
 
 workflows:
