--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "baseUrl": ".",
     "noEmitOnError": true,
     "paths": {
-      "@tests/*":["__tests__/*"],
+      "@tests/*": ["__tests__/*"],
       "@auth/*": ["src/auth/*"],
       "@shared/*": ["src/shared/*"]
     },
@@ -20,6 +20,6 @@
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true
   },
-  "include": ["./src"],
+  "include": ["src/", "package.json"],
   "exclude": ["node_modules", "**/*.test.ts", "dist"]
 }
