refactor: refactors project base

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "noEmitOnError": true,
     "paths": {
       "@tests/*": ["__tests__/*"],
+      "@modules/*": ["src/modules/*"],
       "@auth/*": ["src/auth/*"],
       "@shared/*": ["src/shared/*"]
     },
