--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs:
       - aws-cli/setup
       - serverless/setup
       - run: yarn install --production --cwd dist
-      - run: sls package -p package && sls deploy --package package
+      - run: sls deploy
 
 workflows:
   build-test-deploy:
