fix: layers package

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
       - serverless/setup
       - run: yarn install --production --cwd dist
       # Build Lambda's Layer nodejs package
-      - run: mkdir tmp && cp -r node_modules package.json src tmp && mv tmp nodejs
+      - run: cd dist && mkdir tmp && cp -r node_modules package.json src tmp && mv tmp nodejs
       - run: sls deploy
 
 workflows:
