fix: filters deployment to main branch only

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,7 @@ workflows:
       - deploy-production:
           requires:
             - test
-          # filters:
-          #   branches:
-          #     only: main
+          filters:
+            branches:
+              only: main
       
